objects/MedProSC__MedProSearch_Notification__c.object
<CustomObject>
    <fields>
        <fullName>MedProSC__End_Date__c</fullName>
        <description>Date for the notification to stop showing up.</description>
        <inlineHelpText>Date for the notification to stop showing up.</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MedProSC__Message__c</fullName>
        <label>Message</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MedProSC__Notification_Type__c</fullName>
        <description>Changes the notification icon/style for the associated message.</description>
        <inlineHelpText>Changes the notification icon/style for the associated message.</inlineHelpText>
        <label>Notification Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>urgent</fullName>
                </value>
                <value>
                    <fullName>important</fullName>
                </value>
                <value>
                    <fullName>notify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MedProSC__Start_Date__c</fullName>
        <description>Date for the notification to begin showing up.</description>
        <inlineHelpText>Date for the notification to begin showing up.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>MedPro Search Notification</label>
    <listViews>
        <fullName>MedProSC__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedPro Search Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>